--- a/src/global.css
+++ b/src/global.css
@@ -7,4 +7,6 @@ body {
 	margin: 0;
 	font-family: Garamond, serif;
 	font-size: 1.2rem;
+	color: var(--color-background-200);
+	letter-spacing: 0.03rem;
 }
