--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -37,4 +37,36 @@
  
     --radius: 0.5rem;
   }
+}
+
+@layer utilities {
+  .text-glow {
+    text-shadow:
+      0 0 10px #9b7f3c,
+      0 0 10px #9b7f3c,
+      0 0 20px #9b7f3c,
+      0 0 20px #fff;
+  }
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	height: 100%;
+	margin: 0;
+	font-family: Garamond, sans-serif;
+	font-size: 1.2rem;
+	color: var(--color-secondary-100);
+	letter-spacing: 0.03rem;
+	background-color: black;
+}
+
+.text-glow {
+  text-shadow:
+    0 0 10px #9b7f3c,
+    0 0 10px #9b7f3c,
+    0 0 20px #9b7f3c,
+    0 0 20px #fff;
 }
