--- a/src/app.css
+++ b/src/app.css
@@ -74,3 +74,15 @@ body {
     0 0 20px #9b7f3c,
     0 0 20px #fff;
 }
+
+.nomicon-toast {
+  background-color: var(--color-background-800);
+  color: var(--color-background-50);
+  border-color: var(--color-background-700);
+}
+
+.nomicon-toast[data-type='error'] {
+  background-color: var(--color-red-900);
+  color: var(--color-background-50);
+  border-color: var(--color-background-700);
+}
