--- a/src/app.css
+++ b/src/app.css
@@ -39,6 +39,13 @@
   }
 }
 
+@layer components {
+  .background-gradient {
+    @apply from-black to-background-800/50;
+    background-image: linear-gradient(160deg, var(--tw-gradient-stops));
+  }
+}
+
 @layer utilities {
   .text-glow {
     text-shadow:
