--- a/src/app.css
+++ b/src/app.css
@@ -67,8 +67,8 @@ html {
 body {
 	height: 100%;
 	margin: 0;
-	font-family: Garamond, sans-serif;
-	font-size: 1.2rem;
+	font-family: Calibri, 'Trebuchet MS', sans-serif;
+	/* font-size: 1.2rem; */
 	color: var(--color-secondary-100);
 	letter-spacing: 0.03rem;
 	background-color: black;
