--- a/src/app.css
+++ b/src/app.css
@@ -130,4 +130,14 @@ body {
   ul {
     list-style-type: circle;
   }
+
+  code {
+    white-space: break-spaces !important;
+  }
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    max-height: 200px;
+  }
 }
