--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,34 +1,41 @@
 @font-face {
-  font-family: Garamond;
-  src: url('/fonts/Garamond3LTStd.otf') format('opentype');
-  font-weight: 100;
-  font-style: normal;
+	font-family: Garamond;
+	src: url('/fonts/Garamond3LTStd.otf') format('opentype');
+	font-weight: 100;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: Garamond;
-  src: url('/fonts/Garamond3LTStd-Italic.otf') format('opentype');
-  font-weight: 100;
-  font-style: italic;
+	font-family: Garamond;
+	src: url('/fonts/Garamond3LTStd-Italic.otf') format('opentype');
+	font-weight: 100;
+	font-style: italic;
 }
 
 @font-face {
-  font-family: Garamond;
-  src: url('/fonts/Garamond3LTStd-Bold.otf') format('opentype');
-  font-weight: 700;
-  font-style: normal;
+	font-family: Garamond;
+	src: url('/fonts/Garamond3LTStd-Bold.otf') format('opentype');
+	font-weight: 700;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: Garamond;
-  src: url('/fonts/Garamond3LTStd-BoldItalic.otf') format('opentype');
-  font-weight: 700;
-  font-style: italic;
+	font-family: Garamond;
+	src: url('/fonts/Garamond3LTStd-BoldItalic.otf') format('opentype');
+	font-weight: 700;
+	font-style: italic;
 }
 
 @font-face {
-  font-family: Jacquard;
-  src: url('/fonts/Jacquard24-Regular.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
+	font-family: Jacquard;
+	src: url('/fonts/Jacquard24-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: Triglavian;
+	src: url('/fonts/triglavian-completed.otf') format('opentype');
+	font-weight: 400;
+	font-style: normal;
 }
