--- a/src/app.css
+++ b/src/app.css
@@ -105,12 +105,6 @@ body {
 	border-color: var(--color-background-700);
 }
 
-.truncate {
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
 *::-webkit-scrollbar {
 	width: 10px;
 }
@@ -138,4 +132,17 @@ body {
 
 .triglavian {
 	font-family: 'Triglavian', sans-serif;
+}
+
+.truncate {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.truncate-2 {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
